// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circular progress custom content 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.6px",
            "lineHeight": 1.43,
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.5px",
            "lineHeight": 1.75,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.6px",
            "lineHeight": 1.14,
          },
          "buttonText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "headline1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "96px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-1.5px",
            "lineHeight": 1.17,
          },
          "headline2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "60px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-0.5px",
            "lineHeight": 1.18,
          },
          "headline3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "48px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.19,
          },
          "headline5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.17,
          },
          "headline6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "20px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.25px",
            "lineHeight": 1.2,
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "2px",
            "lineHeight": 1.33,
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.09px",
            "lineHeight": 1.71,
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.15px",
            "lineHeight": 1.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <CircularProgress
        size="large"
        type="success"
        value={75}
      >
        <div
          className="HoiPoi__CircularProgress__root-5-0 HoiPoi__CircularProgress__large-5-3"
        >
          <CircularProgressbarWithChildren
            maxValue={100}
            minValue={0}
            strokeWidth={5}
            styles={
              Object {
                "background": Object {
                  "fill": "none",
                },
                "path": Object {
                  "stroke": "#86AD20",
                  "strokeLinecap": "round",
                },
                "root": Object {},
                "text": Object {
                  "fill": "#262B34",
                  "fontSize": 25,
                },
                "trail": Object {
                  "stroke": "#f0f3f5",
                  "strokeLinecap": "round",
                },
              }
            }
            value={75}
          >
            <div
              data-test-id="CircularProgressbarWithChildren"
            >
              <div
                style={
                  Object {
                    "height": "100%",
                    "position": "relative",
                    "width": "100%",
                  }
                }
              >
                <CircularProgressbar
                  background={false}
                  backgroundPadding={0}
                  circleRatio={1}
                  className=""
                  classes={
                    Object {
                      "background": "CircularProgressbar-background",
                      "path": "CircularProgressbar-path",
                      "root": "CircularProgressbar",
                      "text": "CircularProgressbar-text",
                      "trail": "CircularProgressbar-trail",
                    }
                  }
                  counterClockwise={false}
                  maxValue={100}
                  minValue={0}
                  strokeWidth={5}
                  styles={
                    Object {
                      "background": Object {
                        "fill": "none",
                      },
                      "path": Object {
                        "stroke": "#86AD20",
                        "strokeLinecap": "round",
                      },
                      "root": Object {},
                      "text": Object {
                        "fill": "#262B34",
                        "fontSize": 25,
                      },
                      "trail": Object {
                        "stroke": "#f0f3f5",
                        "strokeLinecap": "round",
                      },
                    }
                  }
                  text=""
                  value={75}
                >
                  <svg
                    className="CircularProgressbar "
                    data-test-id="CircularProgressbar"
                    style={Object {}}
                    viewBox="0 0 100 100"
                  >
                    <Path
                      className="CircularProgressbar-trail"
                      counterClockwise={false}
                      dashRatio={1}
                      pathRadius={47.5}
                      strokeWidth={5}
                      style={
                        Object {
                          "stroke": "#f0f3f5",
                          "strokeLinecap": "round",
                        }
                      }
                    >
                      <path
                        className="CircularProgressbar-trail"
                        d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                        fillOpacity={0}
                        strokeWidth={5}
                        style={
                          Object {
                            "stroke": "#f0f3f5",
                            "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                            "strokeDashoffset": "0px",
                            "strokeLinecap": "round",
                          }
                        }
                      />
                    </Path>
                    <Path
                      className="CircularProgressbar-path"
                      counterClockwise={false}
                      dashRatio={0.75}
                      pathRadius={47.5}
                      strokeWidth={5}
                      style={
                        Object {
                          "stroke": "#86AD20",
                          "strokeLinecap": "round",
                        }
                      }
                    >
                      <path
                        className="CircularProgressbar-path"
                        d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                        fillOpacity={0}
                        strokeWidth={5}
                        style={
                          Object {
                            "stroke": "#86AD20",
                            "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                            "strokeDashoffset": "74.61282552275759px",
                            "strokeLinecap": "round",
                          }
                        }
                      />
                    </Path>
                  </svg>
                </CircularProgressbar>
                <div
                  data-test-id="CircularProgressbarWithChildren__children"
                  style={
                    Object {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "column",
                      "height": "100%",
                      "justifyContent": "center",
                      "marginTop": "-100%",
                      "position": "absolute",
                      "width": "100%",
                    }
                  }
                >
                  Good!
                </div>
              </div>
            </div>
          </CircularProgressbarWithChildren>
        </div>
      </CircularProgress>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Circular progress danger 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.6px",
            "lineHeight": 1.43,
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.5px",
            "lineHeight": 1.75,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.6px",
            "lineHeight": 1.14,
          },
          "buttonText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "headline1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "96px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-1.5px",
            "lineHeight": 1.17,
          },
          "headline2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "60px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-0.5px",
            "lineHeight": 1.18,
          },
          "headline3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "48px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.19,
          },
          "headline5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.17,
          },
          "headline6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "20px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.25px",
            "lineHeight": 1.2,
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "2px",
            "lineHeight": 1.33,
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.09px",
            "lineHeight": 1.71,
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.15px",
            "lineHeight": 1.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <CircularProgress
        text="10%"
        type="danger"
        value={10}
      >
        <div
          className="HoiPoi__CircularProgress__root-4-0 HoiPoi__CircularProgress__medium-4-2"
        >
          <CircularProgressbar
            background={false}
            backgroundPadding={0}
            circleRatio={1}
            className=""
            classes={
              Object {
                "background": "CircularProgressbar-background",
                "path": "CircularProgressbar-path",
                "root": "CircularProgressbar",
                "text": "CircularProgressbar-text",
                "trail": "CircularProgressbar-trail",
              }
            }
            counterClockwise={false}
            maxValue={100}
            minValue={0}
            strokeWidth={5}
            styles={
              Object {
                "background": Object {
                  "fill": "none",
                },
                "path": Object {
                  "stroke": "#f04540",
                  "strokeLinecap": "round",
                },
                "root": Object {},
                "text": Object {
                  "fill": "#262B34",
                  "fontSize": 25,
                },
                "trail": Object {
                  "stroke": "#f0f3f5",
                  "strokeLinecap": "round",
                },
              }
            }
            text="10%"
            value={10}
          >
            <svg
              className="CircularProgressbar "
              data-test-id="CircularProgressbar"
              style={Object {}}
              viewBox="0 0 100 100"
            >
              <Path
                className="CircularProgressbar-trail"
                counterClockwise={false}
                dashRatio={1}
                pathRadius={47.5}
                strokeWidth={5}
                style={
                  Object {
                    "stroke": "#f0f3f5",
                    "strokeLinecap": "round",
                  }
                }
              >
                <path
                  className="CircularProgressbar-trail"
                  d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                  fillOpacity={0}
                  strokeWidth={5}
                  style={
                    Object {
                      "stroke": "#f0f3f5",
                      "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                      "strokeDashoffset": "0px",
                      "strokeLinecap": "round",
                    }
                  }
                />
              </Path>
              <Path
                className="CircularProgressbar-path"
                counterClockwise={false}
                dashRatio={0.1}
                pathRadius={47.5}
                strokeWidth={5}
                style={
                  Object {
                    "stroke": "#f04540",
                    "strokeLinecap": "round",
                  }
                }
              >
                <path
                  className="CircularProgressbar-path"
                  d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                  fillOpacity={0}
                  strokeWidth={5}
                  style={
                    Object {
                      "stroke": "#f04540",
                      "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                      "strokeDashoffset": "268.6061718819273px",
                      "strokeLinecap": "round",
                    }
                  }
                />
              </Path>
              <text
                className="CircularProgressbar-text"
                style={
                  Object {
                    "fill": "#262B34",
                    "fontSize": 25,
                  }
                }
                x={50}
                y={50}
              >
                10%
              </text>
            </svg>
          </CircularProgressbar>
        </div>
      </CircularProgress>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Circular progress simple 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.6px",
            "lineHeight": 1.43,
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.5px",
            "lineHeight": 1.75,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.6px",
            "lineHeight": 1.14,
          },
          "buttonText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "headline1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "96px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-1.5px",
            "lineHeight": 1.17,
          },
          "headline2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "60px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-0.5px",
            "lineHeight": 1.18,
          },
          "headline3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "48px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.19,
          },
          "headline5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.17,
          },
          "headline6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "20px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.25px",
            "lineHeight": 1.2,
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "2px",
            "lineHeight": 1.33,
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.09px",
            "lineHeight": 1.71,
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.15px",
            "lineHeight": 1.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <CircularProgress
        text="10%"
        value={10}
      >
        <div
          className="HoiPoi__CircularProgress__root-1-0 HoiPoi__CircularProgress__medium-1-2"
        >
          <CircularProgressbar
            background={false}
            backgroundPadding={0}
            circleRatio={1}
            className=""
            classes={
              Object {
                "background": "CircularProgressbar-background",
                "path": "CircularProgressbar-path",
                "root": "CircularProgressbar",
                "text": "CircularProgressbar-text",
                "trail": "CircularProgressbar-trail",
              }
            }
            counterClockwise={false}
            maxValue={100}
            minValue={0}
            strokeWidth={5}
            styles={
              Object {
                "background": Object {
                  "fill": "none",
                },
                "path": Object {
                  "stroke": "#00A8Be",
                  "strokeLinecap": "round",
                },
                "root": Object {},
                "text": Object {
                  "fill": "#262B34",
                  "fontSize": 25,
                },
                "trail": Object {
                  "stroke": "#f0f3f5",
                  "strokeLinecap": "round",
                },
              }
            }
            text="10%"
            value={10}
          >
            <svg
              className="CircularProgressbar "
              data-test-id="CircularProgressbar"
              style={Object {}}
              viewBox="0 0 100 100"
            >
              <Path
                className="CircularProgressbar-trail"
                counterClockwise={false}
                dashRatio={1}
                pathRadius={47.5}
                strokeWidth={5}
                style={
                  Object {
                    "stroke": "#f0f3f5",
                    "strokeLinecap": "round",
                  }
                }
              >
                <path
                  className="CircularProgressbar-trail"
                  d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                  fillOpacity={0}
                  strokeWidth={5}
                  style={
                    Object {
                      "stroke": "#f0f3f5",
                      "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                      "strokeDashoffset": "0px",
                      "strokeLinecap": "round",
                    }
                  }
                />
              </Path>
              <Path
                className="CircularProgressbar-path"
                counterClockwise={false}
                dashRatio={0.1}
                pathRadius={47.5}
                strokeWidth={5}
                style={
                  Object {
                    "stroke": "#00A8Be",
                    "strokeLinecap": "round",
                  }
                }
              >
                <path
                  className="CircularProgressbar-path"
                  d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                  fillOpacity={0}
                  strokeWidth={5}
                  style={
                    Object {
                      "stroke": "#00A8Be",
                      "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                      "strokeDashoffset": "268.6061718819273px",
                      "strokeLinecap": "round",
                    }
                  }
                />
              </Path>
              <text
                className="CircularProgressbar-text"
                style={
                  Object {
                    "fill": "#262B34",
                    "fontSize": 25,
                  }
                }
                x={50}
                y={50}
              >
                10%
              </text>
            </svg>
          </CircularProgressbar>
        </div>
      </CircularProgress>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Circular progress success 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.6px",
            "lineHeight": 1.43,
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.5px",
            "lineHeight": 1.75,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.6px",
            "lineHeight": 1.14,
          },
          "buttonText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "headline1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "96px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-1.5px",
            "lineHeight": 1.17,
          },
          "headline2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "60px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-0.5px",
            "lineHeight": 1.18,
          },
          "headline3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "48px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.19,
          },
          "headline5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.17,
          },
          "headline6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "20px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.25px",
            "lineHeight": 1.2,
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "2px",
            "lineHeight": 1.33,
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.09px",
            "lineHeight": 1.71,
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.15px",
            "lineHeight": 1.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <CircularProgress
        text="10%"
        type="success"
        value={10}
      >
        <div
          className="HoiPoi__CircularProgress__root-2-0 HoiPoi__CircularProgress__medium-2-2"
        >
          <CircularProgressbar
            background={false}
            backgroundPadding={0}
            circleRatio={1}
            className=""
            classes={
              Object {
                "background": "CircularProgressbar-background",
                "path": "CircularProgressbar-path",
                "root": "CircularProgressbar",
                "text": "CircularProgressbar-text",
                "trail": "CircularProgressbar-trail",
              }
            }
            counterClockwise={false}
            maxValue={100}
            minValue={0}
            strokeWidth={5}
            styles={
              Object {
                "background": Object {
                  "fill": "none",
                },
                "path": Object {
                  "stroke": "#86AD20",
                  "strokeLinecap": "round",
                },
                "root": Object {},
                "text": Object {
                  "fill": "#262B34",
                  "fontSize": 25,
                },
                "trail": Object {
                  "stroke": "#f0f3f5",
                  "strokeLinecap": "round",
                },
              }
            }
            text="10%"
            value={10}
          >
            <svg
              className="CircularProgressbar "
              data-test-id="CircularProgressbar"
              style={Object {}}
              viewBox="0 0 100 100"
            >
              <Path
                className="CircularProgressbar-trail"
                counterClockwise={false}
                dashRatio={1}
                pathRadius={47.5}
                strokeWidth={5}
                style={
                  Object {
                    "stroke": "#f0f3f5",
                    "strokeLinecap": "round",
                  }
                }
              >
                <path
                  className="CircularProgressbar-trail"
                  d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                  fillOpacity={0}
                  strokeWidth={5}
                  style={
                    Object {
                      "stroke": "#f0f3f5",
                      "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                      "strokeDashoffset": "0px",
                      "strokeLinecap": "round",
                    }
                  }
                />
              </Path>
              <Path
                className="CircularProgressbar-path"
                counterClockwise={false}
                dashRatio={0.1}
                pathRadius={47.5}
                strokeWidth={5}
                style={
                  Object {
                    "stroke": "#86AD20",
                    "strokeLinecap": "round",
                  }
                }
              >
                <path
                  className="CircularProgressbar-path"
                  d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                  fillOpacity={0}
                  strokeWidth={5}
                  style={
                    Object {
                      "stroke": "#86AD20",
                      "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                      "strokeDashoffset": "268.6061718819273px",
                      "strokeLinecap": "round",
                    }
                  }
                />
              </Path>
              <text
                className="CircularProgressbar-text"
                style={
                  Object {
                    "fill": "#262B34",
                    "fontSize": 25,
                  }
                }
                x={50}
                y={50}
              >
                10%
              </text>
            </svg>
          </CircularProgressbar>
        </div>
      </CircularProgress>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`Circular progress warning 1`] = `
<Component>
  <ThemeProvider
    theme={
      Object {
        "colors": Object {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#262B34",
          "blackLight": "#5f656b",
          "blackberry": "#2e2d4c",
          "blackberryDark": "#24243C",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "disabledGrey": "#ced4d9",
          "green": "#86AD20",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "greenLight": "#e7f1d5",
          "grey": "#697782",
          "greyLight": "#f0f3f5",
          "greySoft": "#788590",
          "lines": "#dce3eb",
          "link": "#216db3",
          "linkDark": "#174a79",
          "neutral100": "#f9f9fa",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "placeholders": "#e1e4e7",
          "placeholdersHover": "#d0d4d8",
          "primary": "#FF8C00",
          "primaryDark": "#C87600",
          "primaryLight": "#fef4e6",
          "primarySoft": "#ff9d26",
          "purple": "#AA5B9C",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "purpleLight": "#EEDEEB",
          "red": "#f04540",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "redDark": "#C43833",
          "redLight": "#FAE7E7",
          "redSoft": "#FF544F",
          "secondary": "#00A8Be",
          "secondaryGrey": "#e4eeff",
          "secondaryLight": "#D6EEF2",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "secondarySoft": "#AADFE7",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "tableHeader": "#f6f7f9",
          "tableHeaderHover": "#EBECEF",
          "tableHover": "#FAFBFC",
          "text": Object {
            "black": "#3c4248",
            "danger": "white",
            "default": "#697782",
            "green": "#86AD20",
            "greySoft": "#788590",
            "primary": "white",
            "red": "#f04540",
            "secondary": "#00A8Be",
            "white": "#FFFFFF",
            "yellow": "#E9B200",
          },
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "white": "#FFFFFF",
          "yellow": "#E9B200",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
          "yellowDark": "#BE9100",
          "yellowLight": "#FCF7E5",
        },
        "effects": Object {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "buttonActive": Object {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": Object {
          "bigText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.6px",
            "lineHeight": 1.43,
          },
          "body1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.5px",
            "lineHeight": 1.75,
          },
          "button": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.6px",
            "lineHeight": 1.14,
          },
          "buttonText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "lineHeight": 1.5,
          },
          "caption": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "captionMedium": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.4px",
            "lineHeight": 1.33,
          },
          "defaultText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 13,
            "letterSpacing": 0.5,
          },
          "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSizeBase": 13,
          "fontSizeSmall": 11,
          "headline1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "96px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-1.5px",
            "lineHeight": 1.17,
          },
          "headline2": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "60px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 300,
            "letterSpacing": "-0.5px",
            "lineHeight": 1.18,
          },
          "headline3": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "48px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.19,
          },
          "headline5": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "normal",
            "lineHeight": 1.17,
          },
          "headline6": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "20px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.25px",
            "lineHeight": 1.2,
          },
          "largeText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "12px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "2px",
            "lineHeight": 1.33,
          },
          "smallText": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "14px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": 500,
            "letterSpacing": "0.09px",
            "lineHeight": 1.71,
          },
          "subtitle1": Object {
            "fontFamily": "\\"Roboto\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "16px",
            "fontStretch": "normal",
            "fontStyle": "normal",
            "fontWeight": "normal",
            "letterSpacing": "0.15px",
            "lineHeight": 1.5,
          },
        },
        "utils": Object {
          "scrollbar": Object {
            "&::-webkit-scrollbar": Object {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": Object {
              "background": "#e1e4e7",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
          "options": Object {
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": Object {
              "minify": false,
            },
            "plugins": Array [],
          },
          "plugins": PluginsRegistry {
            "plugins": Object {
              "external": Array [
                Object {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onProcessRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": Array [
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
                Object {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": Object {
              "onChangeValue": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": Array [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": Array [],
              "onProcessStyle": Array [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": Array [
                [Function],
              ],
            },
          },
          "version": "10.3.0",
        }
      }
    >
      <CircularProgress
        text="10%"
        type="warning"
        value={10}
      >
        <div
          className="HoiPoi__CircularProgress__root-3-0 HoiPoi__CircularProgress__medium-3-2"
        >
          <CircularProgressbar
            background={false}
            backgroundPadding={0}
            circleRatio={1}
            className=""
            classes={
              Object {
                "background": "CircularProgressbar-background",
                "path": "CircularProgressbar-path",
                "root": "CircularProgressbar",
                "text": "CircularProgressbar-text",
                "trail": "CircularProgressbar-trail",
              }
            }
            counterClockwise={false}
            maxValue={100}
            minValue={0}
            strokeWidth={5}
            styles={
              Object {
                "background": Object {
                  "fill": "none",
                },
                "path": Object {
                  "stroke": "#E9B200",
                  "strokeLinecap": "round",
                },
                "root": Object {},
                "text": Object {
                  "fill": "#262B34",
                  "fontSize": 25,
                },
                "trail": Object {
                  "stroke": "#f0f3f5",
                  "strokeLinecap": "round",
                },
              }
            }
            text="10%"
            value={10}
          >
            <svg
              className="CircularProgressbar "
              data-test-id="CircularProgressbar"
              style={Object {}}
              viewBox="0 0 100 100"
            >
              <Path
                className="CircularProgressbar-trail"
                counterClockwise={false}
                dashRatio={1}
                pathRadius={47.5}
                strokeWidth={5}
                style={
                  Object {
                    "stroke": "#f0f3f5",
                    "strokeLinecap": "round",
                  }
                }
              >
                <path
                  className="CircularProgressbar-trail"
                  d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                  fillOpacity={0}
                  strokeWidth={5}
                  style={
                    Object {
                      "stroke": "#f0f3f5",
                      "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                      "strokeDashoffset": "0px",
                      "strokeLinecap": "round",
                    }
                  }
                />
              </Path>
              <Path
                className="CircularProgressbar-path"
                counterClockwise={false}
                dashRatio={0.1}
                pathRadius={47.5}
                strokeWidth={5}
                style={
                  Object {
                    "stroke": "#E9B200",
                    "strokeLinecap": "round",
                  }
                }
              >
                <path
                  className="CircularProgressbar-path"
                  d="
      M 50,50
      m 0,-47.5
      a 47.5,47.5 0 1 1 0,95
      a 47.5,47.5 0 1 1 0,-95
    "
                  fillOpacity={0}
                  strokeWidth={5}
                  style={
                    Object {
                      "stroke": "#E9B200",
                      "strokeDasharray": "298.45130209103036px 298.45130209103036px",
                      "strokeDashoffset": "268.6061718819273px",
                      "strokeLinecap": "round",
                    }
                  }
                />
              </Path>
              <text
                className="CircularProgressbar-text"
                style={
                  Object {
                    "fill": "#262B34",
                    "fontSize": 25,
                  }
                }
                x={50}
                y={50}
              >
                10%
              </text>
            </svg>
          </CircularProgressbar>
        </div>
      </CircularProgress>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
